--- a/languages_page/src/App.scss
+++ b/languages_page/src/App.scss
@@ -1,7 +1,7 @@
 @import "./scss/reset.scss";
 
 .App {
-  background-color: rgb(221, 198, 94);
+  background-color: rgb(241, 225, 153);
   padding: 1rem 5rem 5rem 5rem;
   header {
     .logo {
@@ -16,7 +16,7 @@
       margin: auto;
       width: 40rem;
       border-radius: 40px;
-      background-color: aqua;
+      background-color: rgba(255, 136, 0, 0.788);
       text-align: center;
       padding: 1.2rem;
       h1 {
