--- a/tast_tracer/src/components/Task/task.scss
+++ b/tast_tracer/src/components/Task/task.scss
@@ -3,12 +3,14 @@
   width: 20rem;
   display: flex;
   margin: 0.4rem;
+  border-radius: 5px;
   .onay {
     background-color: rgb(161, 7, 7);
   }
   .veri {
     width: 100%;
     margin: 0.8rem;
+    
   }
   button {
     width: 2rem;
