--- a/clarusway_web_page/src/pages/Home/home.scss
+++ b/clarusway_web_page/src/pages/Home/home.scss
@@ -1,6 +1,6 @@
 main {
   .design {
-    height: 40vh;
+    min-height: 40vh;
     background-image: url("../../../public/images/showcase.jpg");
     //   background-size: cover;
     background-position: center;
@@ -28,7 +28,7 @@ main {
     justify-content: space-between;
     align-items: center;
     padding: 0 10rem;
-    background-color: rgb(28, 25, 39);
+    background-color: rgb(41, 38, 38);
     h3 {
       color: white;
     }
@@ -57,5 +57,55 @@ main {
     align-items: center;
     justify-content: center;
     padding: 1rem 8rem;
+  }
+}
+
+@media (max-width: 1180px) {
+  main {
+    .csslogohtml {
+      padding: 1rem 2rem;
+    }
+  }
+}
+@media (max-width: 930px) {
+  main {
+    .subscribe {
+      height: 8vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      padding: 0 2rem;
+      background-color: rgb(41, 38, 38);
+    }
+    .design {
+      p {
+        padding: 0 2rem;
+        margin: 2rem;
+      }
+    }
+  }
+}
+@media (max-width: 504px) {
+  main {
+    .design {
+      h2 {
+        color: white;
+        margin-top: 6rem;
+        font-size: 3rem;
+        text-align: center;
+      }
+      p {
+        padding: 0 1rem;
+        margin: 2rem 1rem;
+      }
+    }
+  }
+}
+@media (max-width: 702px) {
+  main {
+    .csslogohtml {
+      display: flex;
+      flex-direction: column;
+    }
   }
 }
