--- a/clarusway_web_page/src/components/Footer/footer.scss
+++ b/clarusway_web_page/src/components/Footer/footer.scss
@@ -1,14 +1,14 @@
 footer {
-  background-color: rgb(42, 43, 51);
+  background-color: rgb(41, 38, 38);
   color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 2rem;
   padding-top: 2rem;
-  div {
+  .logo {
     img {
-      width: 13rem;
+      margin-bottom: 1rem;
     }
   }
 }
