--- a/clarusway_web_page/src/pages/Services/services.scss
+++ b/clarusway_web_page/src/pages/Services/services.scss
@@ -1,5 +1,5 @@
-.about {
-  .newsletter {
+.servicesmain {
+  .subscribe {
     background-color: rgb(41, 38, 38);
     height: 10vh;
     display: flex;
@@ -31,25 +31,28 @@
       }
     }
   }
-  .metin {
+  .maincontainer {
     display: flex;
     min-height: 64vh;
-    padding: 0 10rem;
-    gap: 4rem;
-    margin-bottom: 1rem;
-    .aboutus {
+    padding: 0 9rem;
+    gap: 3rem;
+    .services {
       width: 65vw;
-      margin-top: 2rem;
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-      .renkli {
-        background-color: rgb(41, 38, 38);
-        color: white;
-        padding: 0.8rem;
+      h3 {
+        margin: 1.2rem 0;
       }
+      div {
+        padding: 1rem;
+        background-color: rgba(209, 209, 209, 0.466);
+        margin: 0.3rem 0;
+        box-shadow: 0 0 2px;
+        p {
+          margin-bottom: 1rem;
+        }
+      }
+      margin-bottom: 1.2rem;
     }
-    .wedo {
+    .quote {
       width: 35vw;
       margin: 2rem 0;
       div {
@@ -58,15 +61,39 @@
         padding: 2rem 1rem;
         display: flex;
         flex-direction: column;
-        gap: 1.2rem;
+        gap: 0.3rem;
+        button {
+          background-color: rgb(214, 86, 27);
+          border: solid rgb(209, 80, 20);
+          width: 4rem;
+          padding: 0.3rem;
+          color: white;
+          text-align: center;
+          height: 2rem;
+        }
+        button:active {
+          width: 3.8rem;
+          margin: 0.1rem;
+          height: 1.8rem;
+        }
+        input {
+          height: 1.7rem;
+          padding-left: 0.5rem;
+        }
+
+        #message {
+          resize: none;
+          height: 3rem;
+          padding-left: 0.5rem;
+        }
       }
     }
   }
 }
 
 @media (max-width: 930px) {
-  .about {
-    .newsletter {
+  .servicesmain {
+    .subscribe {
       height: 8vh;
       display: flex;
       flex-direction: column;
@@ -74,44 +101,24 @@
       padding: 0 2rem;
       background-color: rgb(41, 38, 38);
     }
-
-    .metin {
+    .maincontainer {
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 2rem;
-      .aboutus{
+      gap: 0;
+      .services {
         width: 80vw;
       }
-      
-
-      .wedo {
-        width: 80vw;
-        margin: 1rem 0;
+      .quote {
+        width: 23rem;
       }
     }
   }
 }
-@media (max-width: 504px) {
-  .about {
-    .newsletter {
-      h2 {
-        color: white;
-        margin-top: 6rem;
-        font-size: 3rem;
-        text-align: center;
-      }
-      p {
-        padding: 0 1rem;
-        margin: 2rem 1rem;
-      }
-    }
-  }
-}
-@media (max-width: 1300px) {
-  .about {
-    .metin {
-      padding: 0 5rem;
+@media (max-width: 1308px) {
+  .servicesmain {
+    .maincontainer {
+      padding: 0 4rem;
     }
   }
 }
